# Aula08_Python

./: .gitignore  README.md  etl.py  pipeline.py  pyproject.toml  teste.py
data/: data_1.json  data_2.json  data_3.json
