[tool.poetry]
name = "aula08"
version = "0.1.0"
description = ""
authors = ["Luiz Artur <luiz.lamoglia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
